@@ -22,6 +22,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2909 <https://cta-redmine.irap.omp.eu/issues/2909>`_] -
+  Add GTime.datetime() method and add optional precision to GTime.utc() method.
 
 
 New features
