@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.7.0
 
-5 June 2019
+1 July 2019
 
 
 1. Introduction
@@ -21,7 +21,7 @@ The following classes have been renamed:
 - none
 
 The following methods have been added:
-- none
+- GTime.datetime() - Datetime conversion in Python interface
 
 The following methods have been removed:
 - none
@@ -30,7 +30,7 @@ The following methods have been renamed:
 - none
 
 The arguments for the following methods have been changed:
-- none
+- GTime::utc(const int& precision=0) - Add optional precision value
 
 The return value of the following methods has been changed:
 - none
@@ -73,7 +73,9 @@ None
 
 10. Observation module
 ----------------------
-None
+Add GTime.datetime() method to the Python interface to convert times from and
+to datetime.datetime objects. Add an optional precision argument to the GTime.utc()
+to set the number of digits after the comma for the seconds (#2909).
 
 
 11. Optimization module
